Bugfix: fix ckeditor image preview theme, adding max width and height with auto overflow

--- a/sites/all/themes/mcneese/css/all/all-modules.css
+++ b/sites/all/themes/mcneese/css/all/all-modules.css
@@ -103,12 +103,13 @@
 .mcneese .cke_dialog .cke_dialog_contents .ImagePreviewBox {
   width: auto;
   min-width: 230px;
+  max-width: 350px;
 
   height: auto;
   min-height: 210px;
-  max-height: 240px;
+  max-height: 350px;
 
-  overflow: hidden;
+  overflow: auto;
 }
 
 .mcneese .cke_dialog .cke_dialog_contents .cke_dialog_footer_buttons {
